--- a/Packages-react/ohif-viewer/package.json
+++ b/Packages-react/ohif-viewer/package.json
@@ -104,6 +104,7 @@
     "dicom-parser": "^1.8.3",
     "dicomweb-client": "^0.4.2",
     "hammerjs": "^2.0.8",
+    "healthcare-api-adapter": "git+https://github.com/quantumsoftgroup/healthcare-api-adapter#v0.2.1",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.24.0",
     "ohif-core": "^0.3.5",
@@ -117,6 +118,7 @@
     "react-bootstrap-modal": "^4.2.0",
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
+    "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "react-resize-detector": "^3.4.0",
     "react-router": "^4.3.1",
